# aprilv2

./: .env.example  Dockerfile  README.md  config.yml  demo.py  docker-compose.yml  main.py  providers.yml  pyproject.toml  pytest.ini  requirements.txt  run.sh
april/: __init__.py
april/api/: endpoints.py  websocket.py
april/config/: settings.py
april/core/: manager.py
april/providers/: anthropic_provider.py  base.py  deepseek_provider.py  elevenlabs_provider.py  openai_provider.py
april/tests/: test_config.py  test_manager.py  test_providers.py
config/: providers.yml
src/: main.py
src/core/: config.py  logging.py  manager.py
src/providers/: base.py  deepseek_provider.py  elevenlabs_provider.py  openai_provider.py
tests/: test_api.py  test_config.py  test_providers.py
